# OncoPilot-AI

./: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt  run_gradio.py  run_ingest.py  run_local_api.py
app/: gradio_ui.py  main.py
data/sample_docs/: egfr_resistance_nsclc.txt  kras_g12c_resistance.txt  met_bypass_resistance.txt  mrd_ctdna_monitoring.txt  pdl1_biomarker.txt
src/oncopilot_ai/: config.py  schemas.py  tracing.py
src/oncopilot_ai/agents/: base.py  biomarker_agent.py  coordinator_agent.py  evidence_agent.py  literature_agent.py  synthesis_agent.py  translation_agent.py  trust_agent.py
src/oncopilot_ai/ingestion/: chunker.py  embedder.py  index_builder.py  loader.py
src/oncopilot_ai/llm/: client.py  parsers.py  prompts.py
src/oncopilot_ai/retrieval/: filters.py  reranker.py  retriever.py
src/oncopilot_ai/utils/: ids.py  io.py  text.py
src/oncopilot_ai/workflows/: langgraph_workflow.py  oncology_workflow.py
tests/: test_api.py  test_chunking.py  test_langgraph_workflow.py
